--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-.basic-container {
-  display: flex;
-  justify-content: center;
+.outline {
   font-family: arial;
   font-size: 24px;
   margin: 25px;
